fix: decrease vertical spacing for sidebar list items

--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -15,7 +15,7 @@
   --#{$prefix}sidebar-heading-font-size: var(--#{$prefix}heading-6-font-size);
   --#{$prefix}sidebar-heading-color: var(--#{$prefix}color-text-secondary);
   --#{$prefix}sidebar-link-padding-x: var(--#{$prefix}spacing-s);
-  --#{$prefix}sidebar-link-padding-y: var(--#{$prefix}spacing-xs);
+  --#{$prefix}sidebar-link-padding-y: var(--#{$prefix}spacing-xxs);
   --#{$prefix}sidebar-link-sublist-indent: var(--#{$prefix}spacing-m);
   --#{$prefix}sidebar-link-font-size: var(--#{$prefix}label-font-size);
   --#{$prefix}sidebar-link-line-height: var(--#{$prefix}body-line-height);
